grid repair and social media spacing

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p {
 /* work showcase grid  */
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min(25rem, 100%) 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(25em, 100%), 1fr));
   grid-gap: 20px;
 }
 
